WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279522
[WebGPU] Internal simulator build is broken
https://bugs.webkit.org/show_bug.cgi?id=279522
Summary
[WebGPU] Internal simulator build is broken
Mike Wyrzykowski
Reported
2024-09-11 10:30:13 PDT
[WebGPU] Internal simulator build is broken
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-09-11 10:30:25 PDT
rdar://135808041
Mike Wyrzykowski
Comment 2
2024-09-11 10:32:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33475
EWS
Comment 3
2024-09-11 10:35:56 PDT
Committed
283491@main
(e6e70f585066): <
https://commits.webkit.org/283491@main
> Reviewed commits have been landed. Closing PR #33475 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug