[WebGPU] Internal simulator build is broken https://bugs.webkit.org/show_bug.cgi?id=279522 rdar://135808041

Unreviewed build fix for internal simulator bug.

Unclear why USE(APPLE_INTERNAL_SDK) is 0 for internal simulator builds however.

* Source/WebGPU/WebGPU/MetalSPI.h:

Canonical link: https://commits.webkit.org/283491@main